--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -51,6 +51,7 @@
 \usetikzlibrary{shapes, shadows, arrows, arrows.meta}
 \usetikzlibrary{fit}
 \usetikzlibrary{external}
+\usetikzlibrary{plotmarks} % For matlab2tikz
 \tikzexternalize[prefix=figures/] % Generate all tikz figures in one folder
 
 % Plots
