--- a/control/plots/pid_tuning_plot.tex
+++ b/control/plots/pid_tuning_plot.tex
@@ -7,7 +7,7 @@
             x unit = \si{\second},
             y unit = \si{\metre/\second},
             xmin = 0,   xmax = 16,
-            ymin = -0.1,  ymax = 3,
+            ymin = -0.1,  ymax = 2.5,
             grid = major,
             legend cell align = left,
             legend pos = south east,
@@ -15,7 +15,7 @@
             legend style = {font = \scriptsize},
             label style = {font = \scriptsize},
             tick label style = {font = \scriptsize},
-            width = 0.95\columnwidth,
+            width = 0.45\columnwidth,
             height = 0.5\columnwidth,
             % initialize Dark2
             cycle list/Dark2,
@@ -42,7 +42,7 @@
 
         \addplot+[mark = none, style = solid, ultra thick] 
         table[x = time, y = vel, col sep = comma] 
-        {control/csv/compare_control_pid_Simulink_single_pend_mp0.3_l2.25_PID_vel_steps_tune_scale_0.7.mat.csv};
+        {control/csv/compare_control_pid_Simulink_single_pend_mp0.2_l1_PID_vel_steps_tune_scale_0.7.csv};
         \addlegendentry{($l =$~\SI{2}{\meter}, $m_p =$~\SI{0.3}{\kilo\gram})}
 
         \end{axis}
