Changed rootlocus to ultra thick

--- a/control/plots/pid_tuning_plot.tex
+++ b/control/plots/pid_tuning_plot.tex
@@ -1,4 +1,4 @@
-\begin{figure}[htb]
+\begin{subfigure}[t]{0.45\columnwidth}
     \centering
     \begin{tikzpicture}
         \begin{axis}[            
@@ -49,4 +49,4 @@
     \end{tikzpicture} 
     \caption{\gls{PID} velocity step responses with different payloads}
     \label{fig:pid_tuning_plot}
-\end{figure}
+\end{subfigure}
