--- a/control/plots/rootlocus_cl.tex
+++ b/control/plots/rootlocus_cl.tex
@@ -38,12 +38,12 @@
         ]
 
 
-        \addplot [color=white, forget plot]
+        \addplot [forget plot]
           table[row sep=crcr]{%
         0	0\\
         };
 
-        \addplot [color=mycolor1, only marks, mark=o, mark options={solid, mycolor1}, forget plot]
+        \addplot [only marks, mark=o, mark options={solid, mycolor1}, style = solid, ultra thick,  forget plot]
           table[row sep=crcr]{%
         6.77962264341521e-16	3.13209195267317\\
         6.77962264341521e-16	-3.13209195267317\\
@@ -53,7 +53,7 @@
         -0.563508326896292	0\\
         };
 
-        \addplot [color=mycolor1, only marks, mark=x, mark options={solid, mycolor1}, forget plot]
+        \addplot [color=mycolor1, only marks, mark=x, mark options={solid, mycolor1}, style = solid, ultra thick, forget plot]
           table[row sep=crcr]{%
         0	0\\
         0	0\\
@@ -65,7 +65,7 @@
         -3.59932833650225	0\\
         };
         
-        \addplot [color=blue, forget plot]
+        \addplot [color=blue, style = solid, ultra thick, forget plot]
           table[row sep=crcr]{%
         0	0\\
         -9.32246040892286e-05	0.00990567878862648\\
@@ -163,7 +163,7 @@
         -0.563508326896292	0\\
         };
         
-        \addplot [color=mycolor2, forget plot]
+        \addplot [color=mycolor2, style = solid, ultra thick, forget plot]
           table[row sep=crcr]{%
         -3.59932833650225	0\\
         -3.59932688489678	0\\
@@ -261,7 +261,7 @@
         -4.01084873037111	0\\
         };
         
-        \addplot [color=mycolor3, forget plot]
+        \addplot [color=mycolor3, style = solid, ultra thick, forget plot]
           table[row sep=crcr]{%
         -4.01084873036827	0\\
         -4.01084873036822	0\\
@@ -359,7 +359,7 @@
         -4.43649167310231	0\\
         };
         
-        \addplot [color=mycolor4, forget plot]
+        \addplot [color=mycolor4, style = solid, ultra thick,  forget plot]
           table[row sep=crcr]{%
         2.63677968348475e-16	-3.32301249776487\\
         -1.31214832611581e-05	-3.32301038947714\\
@@ -457,7 +457,7 @@
         6.77962264341521e-16	-3.13209195267317\\
         };
         
-        \addplot [color=red, forget plot]
+        \addplot [color=red, style = solid, ultra thick,  forget plot]
           table[row sep=crcr]{%
         2.63677968348475e-16	3.32301249776487\\
         -1.31214832611581e-05	3.32301038947714\\
@@ -555,7 +555,7 @@
         6.77962264341521e-16	3.13209195267317\\
         };
 
-        \addplot [color=black!50!green, forget plot]
+        \addplot [color=black!50!green, style = solid, ultra thick,  forget plot]
           table[row sep=crcr]{%
         0	0\\
         -9.32246040892286e-05	-0.00990567878862648\\
@@ -653,7 +653,7 @@
         -3.72687109858774	0\\
         };
         
-        \addplot [color=red, only marks, mark=square, mark options={solid, red}, forget plot]
+        \addplot [color=red, only marks, mark=square, mark options={solid, red}, style = solid, ultra thick, forget plot]
           table[row sep=crcr]{%
         -15.5127260871559	7.75374247372119\\
         -15.5127260871559	-7.75374247372119\\
