--- a/control/pid.tex
+++ b/control/pid.tex
@@ -1,24 +1,32 @@
-\FloatBarrier\section{Cascaded PID}
+\FloatBarrier\section{Cascaded \gls{PID} control}
 
     \paragraph
-    This section gives a brief overview of the PID control architecture.
-    The controllers are designed based on a linearised model of the multirotor without a payload.
-    The design process used to determine the controller gains are also discussed in this section.
-    Finally the controllers are implemented with MATLAB and Simulink and are verified with practical flight data.
+    This section gives a brief overview of the \gls{PID} control architecture.
+    The \gls{PID} controllers will designed based on a linearised model of the multirotor without a payload.
+    The design process used to determine the controller gains will also discussed in this section.
+    Finally the controllers will be implemented with MATLAB and Simulink and are verified with practical flight data.
     % ?? remember to add practical verification
 
     \paragraph
-    The PX4-Autopilot was chosen as the multirotor flight-stack because it is open-source and widely used in industry and research.
-    The default PX4 control architecture for a multirotor consists of multiple cascaded PID controller loops.
+    PX4-Autopilot was chosen as the multirotor flight-stack because it is open-source and widely used in industry and research.
+    PX4 applies \gls{PID} controllers as the default multirotor controllers.
+    \gls{PID} control is a popular linear control technique that applies a control signal proportional to 
+    the error signal, 
+    the integral of the error signal, 
+    and the derivative of the error signal.
+    The \gls{PID} implementation of PX4 does not provide active swing-damping of the payload.
+    
+    \paragraph
+    The default PX4 control architecture for a multirotor consists of multiple cascaded \gls{PID} controller loops.
     This is devided into two main categories, the inner loop attitude controllers and the outher loop translational controllers.
+    Figure~\ref{fig:pid_architecture} shows a high level overview of the PX4 control architecture, but does not show state feedback. 
 
     \input{control/diagrams/pid_architecture.tex}
 
     % ?? Fix notation of symbols and define them
 
     \paragraph
-    Figure~\ref{fig:pid_architecture} shows a high level overview of the PX4 control architecture, but does not show state feedback. 
-    The inner-most element is the mixer, which converts virtual actuator commands to actuator thrust commands.
+    The inner-most control element is the mixer, which converts virtual actuator commands to actuator thrust commands.
     % This is achieved with simple matrix multiplication.
     The attitude controller includes the angle and angular rate controllers, which send sommands to the mixer.
     The translational controller consists of the position and velocity controllers, which send commands to the attitude controller.
@@ -29,7 +37,7 @@
     \FloatBarrier\subsection{Angular rate controller}
 
         \paragraph
-        Three seperate linear PID controllers are used to the control angular rate of the multirotor in the pitch, roll, and yaw axis of the body frame.
+        Three seperate linear \gls{PID} controllers are used to the control angular rate of the multirotor in the pitch, roll, and yaw axis of the body frame.
         The angular rate controller receives angular rate estimates from the PX4 state estimator, and outputs virtual actuator commands to the mixer.
         Figure~\ref{fig:angular_rate_controller} shows a diagram of the PX4 angular rate controller.
         
@@ -110,14 +118,13 @@
         
         The translational controller consists of the position and velocity conyrollers.
         Position control is not required for training data in this work, therefore it will not be discussed in this section.
-        For more details about the PX4 position control implementation and design, readers are refered to the work by \cite{Grobler2020}.
         A diagram of the North velocity controller is shown in Figure~\ref{fig:velocity_controller}.
         The West and Down velocity controllers duplicate the same configuration.
 
         \input{control/diagrams/velocity_controller.tex}
 
         \paragraph
-        Recall from Chapter~\ref{chap:system_id}, that the cascaded PID controller is used for velocity step inputs in the training data phase for system identifcation.
+        Recall from Chapter~\ref{chap:system_id}, that the cascaded \gls{PID} controller is used for velocity step inputs in the training data phase for system identifcation.
         The system identification methods produce linear models, which are used in swing damping controllers to minimise the payload angles during flight.
         Therefore training data with large payload angles is undesirable, because it is very different from the vector subspace that the swing damping controllers will operate in.
         The velocity controller gains used for Honeybee by \cite{Grobler2020} result in aggressive veloicty responses, which produces large payload swing angles.
@@ -143,6 +150,7 @@
             \label{fig:pid_tuning_subfigs}  
         \end{figure}
 
-        Figure~\ref{fig:pid_tuning_plot_vel} shows velocity step response for a cascaded PID controller with a payload.
-        % ?? Talk about pid response. What do you want to show?
+        \paragraph
+        Figure~\ref{fig:pid_tuning_plot_vel} shows velocity step response for a cascaded \gls{PID} controller with a payload.
+        % ?? Talk about \gls{PID} response. What do you want to show?
         % ?? Check connection with system id chapter for training data controller
