--- a/control/control.tex
+++ b/control/control.tex
@@ -5,26 +5,46 @@
 \chapter{Control systems}
 \label{chap:control}
 
-    \FloatBarrier\section{Overview of controllers} \label{sec:controller_overview}
+    \paragraph
+    Three different types of controllers are considered in this work, namely \gls{PID}, \gls{LQR}, and \gls{MPC}.
+    \gls{PID} control is implemented by the standard PX4 control architecture, however it does provide active swing-damping of the payload. 
+    \gls{LQR} is a popular and well-known optimal control technique. 
+    In previous work by \cite{Erasmus2020} and \cite{Slabber2020}, 
+    an \gls{LQR} implementation with an parameter estimator was designed for active swing-damping control of a multirotor with an unknwon suspended payload.
+    This \gls{LQR} architecture was shown to be an effective swing-damping controller and will be applied in this work as the baseline controller.
+    
+    \paragraph
+    In Chapter~\ref{chap:system_id}, a data-driven system identification method was introduced to estimate a linear model of unknown dynamics.
+    This model will be used in an \gls{MPC} for active swing-damping control of the multirotor and payload system. 
+    The proposed \gls{MPC} architecture will therefore be compared to the baseline \gls{LQR} controller.
+    These swing-damping control architectures are summarised in Table~\ref{tbl:controller_summary}, where the controller is matched with the system identification method.
 
-        \begin{table}[!h]
-            \renewcommand{\arraystretch}{1.1}
-            \centering
-            \caption{Summary of the system identification techniques paired with the active damping controllers.}
-            \begin{tabularx}{0.75\linewidth}{@{}lll@{}}
-                \toprule
-                \multicolumn{2}{c}{\textbf{System identification}}   & \textbf{Controller} \\
-                \cmidrule(lr){1-2}
-                Category    & Algorithm                     & \\
-                \midrule
-                White-box   & RLS mass estimator, and       & \gls{LQR} \\
-                            & FFT cable length estimator    & \\
-                Black-box   & DMDc, or                      & \gls{MPC} \\
-                            & HAVOK                         & \\
-                \bottomrule
-            \end{tabularx}
-            \label{tbl:controller_summary}
-        \end{table}
+    % ?? Check tenses in every intro of every chapter
+
+    \begin{table}[!h]
+        \renewcommand{\arraystretch}{1.1}
+        \centering
+        \caption{Active damping controllers paired with the corresponding system identification technique.}
+        \begin{tabularx}{0.75\linewidth}{@{}lll@{}}
+            \toprule
+            \multicolumn{2}{c}{\textbf{System identification}}   & \textbf{Controller} \\
+            \cmidrule(lr){1-2}
+            Category    & Algorithm                     & \\
+            \midrule
+            White-box   & RLS mass estimator, and       & \gls{LQR} \\
+                        & FFT cable length estimator    & \\
+            Black-box   & DMDc, or                      & \gls{MPC} \\
+                        & HAVOK                         & \\
+            \bottomrule
+        \end{tabularx}
+        \label{tbl:controller_summary}
+    \end{table}
+
+    \paragraph
+    In this chapter, an overview of the different controllers will be given and the design process of each controller will be explained.
+    A MATLAB/Simulink simulation environment will also be introduced to test the controllers.
+    The controllers will then be tested in simulations with different system paramaters and with distrubances.
+    Finally, the simulation results will be shown and discussed.
     
     \input{control/pid}
 
