--- a/control/plots/compare_control_vel_wind_disturbance.tex
+++ b/control/plots/compare_control_vel_wind_disturbance.tex
@@ -30,7 +30,7 @@
         {control/csv/compare_control_mpc_Simulink_single_pend_mp0.3_l2.25_MPC_vel_steps_tune_scale_0.7_wind_step_disturb.csv};
         \addlegendentry{Setpoint}
 
-        \pgfplotsset{cycle list shift = 1} % Shift to skip PID colour used in other plots
+        \pgfplotsset{cycle list shift = 1} % Shift to skip \gls{PID} colour used in other plots
 
         \addplot+[mark = none, style = solid, ultra thick] 
         table[x = time, y = vel, col sep = comma] 
